--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myweb",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "recoil": "^0.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
